2005-09-06  Benoît Dejean  <benoit@placenet.org>

	* monotone.cc: One more i18n string.

2005-09-06  Benoît Dejean  <benoit@placenet.org>

	* po/fr.po: Updated French translation.

2005-09-06  Benoît Dejean  <benoit@placenet.org>

	* commands.cc: No i18n for cert_revision_changelog.

2005-09-05  Benoît Dejean  <benoit@placenet.org>

	* commands.cc: Fixed some strings (added ' around revisions).
	Removed some whitespaces.
	No i18n in diff output.

2005-09-05  Benoît Dejean  <benoit@placenet.org>

	* sanity.{cc,hh}: boost::format vs. F(). Merged boost::format
	and moved non-template code to sanity.cc.

2005-09-05  Matthew Gregan  <kinetik@orcon.net.nz>

	* paths.cc (find_and_go_to_working_copy): Create root and bookdir
	paths as fs::native.
	* main.cc: Tweak #ifdef to avoid exposing some unused SEH handling
	on MinGW.
	* configure.ac: Minor cleanup to Win32 configure test.

2005-09-04  Nathaniel Smith  <njs@pobox.com>

	* monotone.cc (options): Remove default from the help string for
	--count, since none of the options listed are actually the
	default.

2005-09-04  Nathaniel Smith  <njs@pobox.com>

	* tests/t_unreadable_db.at, testsuite.at: New test.

2005-09-03  Nathaniel Smith  <njs@pobox.com>

	* po/Makevars (XGETTEXT_OPTIONS): N_ != ngettext.
	Add c-format flags on F() and FP() calls (only partially
	successful on latter, because of bug in xgettext).
	
2005-09-04  Grahame Bowland  <grahame@angrygoats.net>

	* commands.cc: siplify the monotone cat command 
	to "monotone cat [-r] FIELNAME" (as in bug #12597)
	* monotone.texi: update documentation of "monotone cat"
	* tests/t_add_edge.at, tests/t_cat_file_by_name.at, 
	tests/t_change_empty_file.at, tests/t_cvsimport.at, 
	tests/t_cvsimport_deleted_invar.at, tests/t_cvsimport_drepper.at, 
	tests/t_cvsimport_drepper2.at, tests/t_cvsimport_manifest_cycle.at, 
	tests/t_cvsimport_samelog.at, tests/t_database_check.at, 
	tests/t_db_kill_rev_locally.at, tests/t_empty_id_completion.at, 